--- a/Style/style.css
+++ b/Style/style.css
@@ -13,8 +13,8 @@
 
 /*=================================================HEADER START=====================================*/
 
-header{
-    height: 100px;
+header .container{
+    padding: 18px 0;
 }
 
 header .container ul li a{
@@ -35,7 +35,7 @@ header .container ul li a:hover{
 /*==================================================MAIN START=====================================*/
 
 .amelia__bg{
-    height: 350px;
+    
     background: #323232;
 }
 
@@ -44,6 +44,7 @@ header .container ul li a:hover{
     font-size: 60px;
     color: #ffffff;
     text-transform: capitalize;
+    padding-top: 110px ;
 }
 
 .amelia__bg p{
@@ -51,13 +52,17 @@ header .container ul li a:hover{
     font-size: 22px;
     color: #ffffff;
     text-align: center;
+    padding-bottom: 115px;
 }
 
 
 
 .icon__bg{
     background: #007d2f;
-    height: 240px;
+}
+
+.icon__bg .container{
+    padding: 60px 0 100px 0;
 }
 
 .icon__item .icon{
@@ -93,20 +98,37 @@ main .right{
     background: #f5f5f5;
 }
 
-.right h3{
+.about__me-title{
     font-family: 'Montserrat-Medium';
     font-size: 30px;
     color: #171717;
     margin-bottom: 40px;
 }
 
+.about__me{
+    background: #f5f5f5;
+}
 
-.right p{
+.about__me-description{
     font-family: 'NunitoSans-Regular';
     font-size: 16px;
     color: #787878;
-    width: 445px;
     line-height: 24px;
+}
+
+.image__men{
+    position: absolute;
+    right: 100%;
+    width: 50vw;
+    top: 0;
+    object-fit: cover;
+    /* object-position: bottom; */
+    height: 100%;
+}
+
+.about__me-inner{
+    /* padding: 140px 0; */
+    padding: 258px 0;
 }
 
 .right h3, .right p, .right img{
@@ -152,6 +174,7 @@ main .right{
     color: black;
 }
 
+
 /*==================================================MAIN END=====================================*/
 
 footer{
@@ -186,3 +209,61 @@ footer .container{
     text-decoration: none;
     color: wheat;
 }
+
+
+@media(max-width: 767px){
+    .about__me{
+        background: url(../Pictures/smile-man.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+
+    }
+
+    .about__me-inner{
+        background: rgba(0, 0, 0, 0.5);
+        border-radius: 30px;
+    }
+
+    .about__me-title{
+        color: white;
+    }
+
+    .about__me-description{
+        color: white;
+    }
+
+    .header__content{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .header__content img{
+        margin-bottom: 30px;
+    }
+
+    .signature{
+        display: none;
+    }
+}
+
+@media(max-width:991px){
+    .middle{
+        display: none;
+    }
+}
+
+@media(max-width:472px){
+    .amelia__bg h3{
+        font-size: 40px;
+        padding-top: 50px;
+    }
+
+    .amelia__bg p{
+        font-size: 15px;
+        padding-bottom: 50px;
+    }
+
+}
+
