--- a/Style/style.css
+++ b/Style/style.css
@@ -181,6 +181,9 @@ footer{
     height: 284px;
     background: #141414;
 }
+footer .row{
+    width: 100%;
+}
 
 footer .container{
     height: 100%;
